--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-crypto/hkdf-node": "^1.0.0",
+    "elliptic": "^6.5.2",
+    "qrcode": "^1.4.4",
     "ws": "^7.2.0"
   }
 }
